# lightcrawl

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  pyproject.toml
bench/: README.md  baseline.py  diagnostic.py  report.py  runner.py  tokens.py  urls.toml  urls_extended.toml  urls_pdf.toml  urls_smoke.toml
bench/results/: diagnostic.json  diagnostic.md  diagnostic_extended.json  diagnostic_extended.md  full.json  full.md  full_v2.json  full_v2.md  smoke.json  smoke.md  smoke_v2.json
docs/: lightcrawl-test-issues.md
docs/superpowers/plans/: 2026-05-19-pr1-canonical-and-default-flip.md  2026-05-30-jobs-data-layer.md
docs/superpowers/specs/: 2026-05-30-jobs-data-layer-design.md  2026-05-31-crawl-engine-design.md  2026-05-31-robots-subsystem-design.md
docs/v0.3/: design.md  review.md
skills/lightcrawl/: SKILL.md
skills/refetch/: SKILL.md
src/lightcrawl/: actions.py  auth.py  cache.py  canonical.py  cli.py  content.py  crawl.py  errors.py  fetch_browser.py  fetch_http.py  fetch_pdf.py  jobs.py  paths.py  robots.py  router.py  sitemap.py  url_safety.py
src/lightcrawl/search/: __init__.py  config.py  service.py  snippet.py  types.py
src/lightcrawl/search/backends/: __init__.py  base.py  brave.py  serper.py  tavily.py
src/refetch/: auth.py  cli.py  content.py  errors.py  fetch_browser.py  fetch_http.py  paths.py  router.py  server.py
src/refetch/search/: service.py
src/refetch/search/backends/: base.py  tavily.py
tests/: test_auth.py  test_bench_report.py  test_cache.py  test_canonical.py  test_cli.py  test_cli_cache.py  test_content.py  test_crawl.py  test_jobs.py  test_pr1a_params.py  test_pr1b_mobile.py  test_pr2_screenshot.py  test_pr4_pdf.py  test_pr5_actions.py  test_robots.py  test_router.py  test_router_cache.py  test_search.py  test_search_backends.py  test_search_config.py  test_search_mojibake.py  test_search_snippet.py  test_sitemap.py  test_url_safety.py
