[project]
name = "lightcrawl"
version = "0.2.0"
description = "Replaces Claude Code's built-in WebFetch and WebSearch with a local CLI + skill that actually work on the real web — anti-bot bypass, JS rendering, login sessions, and multi-backend search."
requires-python = ">=3.11"
dependencies = [
    "curl_cffi>=0.7.0",
    "playwright>=1.45.0",
    "playwright-stealth>=1.0.6",
    "markdownify>=0.11.6",
    "lxml>=5.0.0",
    "tldextract>=5.1.0",
    # httpx is used by all three search backends (brave/serper/tavily) and by
    # auth._check_cdp_pages. Not optional — search and auth login both import
    # it at module load.
    "httpx>=0.27.0",
    "tomli>=2.0.0; python_version<'3.11'",
    "pypdf>=4.0",
    # psutil — cross-platform PID + create_time liveness for crawl job
    # reconcile (v0.3 PR 5, design §5.4). Avoids fcntl/flock edge cases on
    # Windows / antivirus / OneDrive-synced dirs (review B5).
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]
bench = [
    "tiktoken>=0.7.0",
    # diagnostic.py compares P3 (the production pipeline) against P1
    # (readability+markdownify, the previous pipeline) and P4 (trafilatura)
    # as long-term regression baselines. Neither is used by the package itself.
    "readability-lxml>=0.8.1",
    "trafilatura>=2.0.0",
]

[project.scripts]
lightcrawl = "lightcrawl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lightcrawl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
